--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   }</style>
 </head>
 <body>
-    
+    <h1 style="align:centre">Tirth Motka</h1>
 <div class="thing">
   <div class="thing">
     <div class="thing">
