--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     margin: 5px;
     border: 10px solid transparent;
     border-color: #fb9701 #000000 #25EAF7 #ffffff;
-   border-radius: 100%;
+/*    border-radius: 100%; */
     animation: thing 10s cubic-bezier(0.70, -0.14, 0.79, 1.22) infinite;
   }
   @keyframes thing {
