--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   }</style>
 </head>
 <body>
-    <div><h1 style="align:centre color:white">Tirth Motka</h1></div>
+    <div><h1 style="align:centre color:white">Tirth Motka</h1><br></div>
 <div class="thing">
   <div class="thing">
     <div class="thing">
