--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <header class="d-flex masthead" style="background-image:url('assets/img/bg-masthead.jpg');">
         <div class="container my-auto text-center">
             <h1 class="mb-1">Algorithms</h1>
-            <h3 class="mb-5"><em>By Tirth Motka</em></h3><a class="btn btn-primary btn-xl js-scroll-trigger" role="button" href="#about">Goto Algorithms page</a>
+            <h3 class="mb-5"><em>By Tirth Motka</em></h3><a class="btn btn-primary btn-xl js-scroll-trigger" role="button" href="#portfolio">Goto Algorithms page</a>
             <div class="overlay"></div>
         </div>
     </header>
