--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
 
 
-	<section class="site-hero" id="section-home" data-stellar-background-ratio="0.5">
-		<!-- <section class="site-hero" style="background-image: url(images/image_1.jpg);" id="section-home" data-stellar-background-ratio="0.5"> -->
+<!-- 	<section class="site-hero" id="section-home" data-stellar-background-ratio="0.5"> -->
+		<section class="site-hero" style="background-image: url(images/four.jpg);" id="section-home" data-stellar-background-ratio="0.5">
 		<div class="container">
 			<div class="row intro-text align-items-center justify-content-center">
 				<div class="col-md-10 text-center pt-5">
